# gamesLibrary

./: .gitignore  .pre-commit-config.yaml  config_parser.py  defaultConfig.toml  export.py  handler.py  pyproject.toml  requirements.txt  setup.py
gamesLibrary.egg-info/: PKG-INFO  SOURCES.txt
src/: create_config.py  export.py  handler.py  settings.py
tests/: conftest.py  settings_fixtures.py  test_create_config.py  test_handler.py  test_settings.py
