[tool.poetry]
name = "gameslibrary"
version = "0.1.0"
description = "Unfinished chess utility that will collect, store, and update a player's games from lichess, manual entry, etc. for analysis from one location."
authors = ["Eliza Wilson <elizaaverywilson@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"
tomlkit = "^0.11.4"
pre-commit = "^2.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
